--- a/assets/styles/utils/_variables.scss
+++ b/assets/styles/utils/_variables.scss
@@ -12,3 +12,38 @@ $breakpoints: (
   lg: 940px,
   xl: 1260px
 );
+
+$container-max-width: 1200px;
+$container-narrow-max-width: 41rem;
+
+// Colors
+//
+// Grayscale.
+
+$gray-darkest: #373a3c;
+$gray-dark: #55595c;
+$gray: #818a91;
+$gray-light: #eceeef;
+$gray-lightest: #f7f7f9;
+
+// Typography
+//
+// Font, line-height, and color for body text, headings, and more.
+
+$font-family-sans-serif: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+  'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+$font-family-serif: 'Noe Display', Georgia, Times, serif;
+$font-family-monospace: Menlo, Monaco, Consolas, 'Andale Mono', 'Courier New',
+  monospace;
+$font-family-base: $font-family-sans-serif;
+
+$font-size-root: 100%;
+$font-size-base: 1rem;
+$line-height: 1.625;
+
+// Animation
+$animation-curve-fast-out-slow-in: cubic-bezier(0.4, 0, 0.2, 1);
+$animation-curve-linear-out-slow-in: cubic-bezier(0, 0, 0.2, 1);
+$animation-curve-fast-out-linear-in: cubic-bezier(0.4, 0, 1, 1);
+$animation-curve-default: $animation-curve-fast-out-slow-in;
