--- a/assets/styles/utils/_variables.scss
+++ b/assets/styles/utils/_variables.scss
@@ -26,6 +26,24 @@ $gray: #818a91;
 $gray-light: #eceeef;
 $gray-lightest: #f7f7f9;
 
+// Brand Colors
+
+$brand-red: #ff335f; //#fc6767;
+$brand-cyan: #43a9a3;
+
+// Color Mappings
+
+$bg-color: #fff;
+$bg-color-semitransparent: rgba(255, 255, 255, 0.85);
+$bg-color-secondary: $gray-lightest;
+$text-color: $gray-darkest;
+$text-color-secondary: $gray;
+$border-color: $gray-light;
+$brand-color-primary: $brand-red;
+$brand-color-primary-offset: darken($brand-red, 6%);
+$brand-color-secondary: $brand-cyan;
+$header-border-color: $gray-darkest;
+
 // Typography
 //
 // Font, line-height, and color for body text, headings, and more.
@@ -47,3 +65,14 @@ $animation-curve-fast-out-slow-in: cubic-bezier(0.4, 0, 0.2, 1);
 $animation-curve-linear-out-slow-in: cubic-bezier(0, 0, 0.2, 1);
 $animation-curve-fast-out-linear-in: cubic-bezier(0.4, 0, 1, 1);
 $animation-curve-default: $animation-curve-fast-out-slow-in;
+
+// Misc Shared
+//
+// common shared styles
+
+$border-radius: 0.25rem;
+$spacing-x: 2rem;
+$spacing-y: 2rem;
+
+$box-shadow: 0 2px 16px rgba(0, 0, 0, 0.15);
+$box-shadow-elevated: 0 6px 12px 0 rgba(0, 0, 0, 0.1);
