--- a/assets/css/prism-vsc-dark-plus.css
+++ b/assets/css/prism-vsc-dark-plus.css
@@ -6,7 +6,7 @@ code[class*='language-'] {
   font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
   direction: ltr;
   text-align: left;
-  white-space: pre;
+  white-space: pre-wrap;
   word-spacing: normal;
   word-break: normal;
   line-height: 1.5;
